# pfnext-shuttle

./: .gitignore  Cargo.toml  Config.properties  docker.txt  migrate.sql  schema.sql
assets/: attendance.html  bookings.html  edit_session.html  index.html  login.html  members.html  passwordreset.html  profile.html  register.html  sessions.html  stats.html
assets/js/: utils.js
data/: add_person1.json  add_person2.json  add_person_javier.json  add_person_joe.json  add_person_neil.json
src/: backup.rs  bookings.rs  claims.rs  cors.rs  login.rs  main.rs  persons.rs  post_delete_profile_email.txt  post_reset_email.txt  register_email.txt  register_notify_email.txt  reset_email.txt  sessions.rs
