[package]
name = "pfnext"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"]}
jsonwebtoken = { version = "9.3.0", default-features = false }
lazy_static = "1.4.0"
password-auth = "1"
rocket = {  version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.198", features = ["derive"] }
shuttle-rocket = "0.44.0"
shuttle-runtime = "0.44.0"

shuttle-shared-db = { version = "0.44.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres"] }

tokio = "1.37.0"

mail-send = "0.4.7"
passwords = "3.1.16"
urlencoding = "2.1.3"
rand = "0.8.5"